<resources>
    <string name="app_name">Todo task</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Please enter valid email or password</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="all_todo_tasks">All ToDo Tasks</string>
    <string name="add">Add</string>
    <string name="addItem">ADD</string>
    <string name="content">content</string>
    <string name="title">Title</string>
    <string name="title_activity_add_task">addTask</string>
    <string name="TitleHint"><font size="15">Title</font></string>
    <string name="addItemNew">Add</string>
    <string name="contentUser"><font size="15">Content</font></string>
    <string name="hint_title">titleCast</string>
    <string name="titlecc">Title</string>
    <string name="contentUU">Content</string>
    <string name="del">DEL</string>
    <string name="titleEdit"><font size="15">Title</font></string>
    <string name="contentEdit"><font size="15">Content</font></string>
    <string name="editItem">Edit</string>
    <string name="confirm">COnfirm</string>
    <string name="add_item">Add</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="no_data_available">no_data</string>
    <string name="adddddddd">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="Content">Content</string>
    <string name="error_field">title or content is empty</string>
</resources>
