<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:clickable="true"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:minLines="2"
            android:padding="8dp"
            android:textColor="@android:color/white" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/textLayoutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textLayoutTitle"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputContent"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/Content"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/addToDo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:clickable="false"
        android:text="@string/add_item"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
